# remote-file

./: .dockerignore  Cargo.toml  Dockerfile  README.md  compose.local.yaml  docker-compose.yaml  package.json  wrangler.toml
functions/: [[path]].js
public/: 404.html  _headers  app.js  index.html
src/: main.rs
