[package]
name = "remote-file"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["multipart"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.41", features = ["fs", "macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["trace"] }
urlencoding = "2.1"
